--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title> My Personal Webpage </title>
+</head>
+<body>
+<header> 
+  <h1>Welcome to MY Personal Webpage</h1>
+  <p> This is simple example of a HTML and CSS personal webpage.</p>
+</header>
+</body>
+</html>
