--- a/index.html
+++ b/index.html
@@ -1,4 +1,161 @@
+
 <!DOCTYPE html>
+<html>
+<head>
+<style>
+ body{background-color:dark red;
+font-family:Arial;
+color:black;
+text-align:center;
+header{
+background-color:tomato;
+color:white;
+text-align:center;
+padding:20px;
+}
+h1{
+color:navy;
+font-size:36px;
+}
+p{
+font-size:px18;
+}
+img{ width:200px;
+border-radius:50%;
+border:3px red;
+margin-top:10px;
+}
+.table-style1{
+width:80%;
+margin:20px auto;
+border:2px solid navy;
+}
+.table-style1 th,.table-style1 td{
+border:1px solid navy;
+padding:10px;
+text-align:center;
+}
+.table-style1 th{
+background-color:lightlue;
+}
+.table-style2{
+width:60%;
+margin:20px auto;
+border-collapse:collapse;
+border:2px solid darkgreen;
+}
+.table-style2 th,.table-style2 td{
+border:1px solid darkgreen
+padding:10px:
+text-align:center;
+}
+.table-style2 th{
+background-color: darkblue;
+}
+.about {
+width:60%;
+margin:20px auto;
+text-align:left;
+}
+div.mycontainer {
+width:66%;
+overflow:auto;
+}
+
+div.mycontainer div {
+width:50%;
+float:left;
+}
+.video {
+width:35%
+margin: 10px auto;
+text-align:center;
+border:3px solid green;
+}
+</style>
+  <title> My Personal Webpage </title>
+</head>
+<body>
+<header> 
+  <h1>Welcome to MY Personal Webpage</h1>
+  <p> This is simple example of a HTML and CSS personal webpage.</p>
+<pre>
+Name:Joshua Maxwell
+Age:26
+Location: Kansas city
+</pre>
+</header>
+<section class="about">
+<p> Check out my favorite website:
+<a href= "https://www.goat.com/" target= "_blank"> search goats new attire </a>
+</p>
+<a href= "mailto:jm1322142@gmail.com" target "_blank"> jm1322142@gmail.com</a>
+<a href= "https://www.google.com/aclk?sa=L&ai=DChsSEwjmoND83_mQAxXtSH8AHcxnKLYYACICCAEQCRoCb2E&co=1&ase=2&gclid=Cj0KCQiArOvIBhDLARIsAPwJXOZjoR3zNIMyYWoIuVXvto4M9T7c9cp3vzJ_00WIBPq4JLMJKtqAd70aAo6eEALw_wcB&cid=CAASugHkaLKcmmIDO8ekchGuHxxoofwDryrBkAsjfjfMeRwOs7Tm-_WDDGNrJwFGOOlP2CPebY2xNS4ZIh_YSFbpib3yUAwh3Fre05Vbkm6RtPqudVMgeljylBCpmmau7lMqf2le_Hu0cBiBI2SI7LzW7vczPdv4f6B5UpEbvRUxuYO8LzgJKR5JYDNSr_KptNW0r1qUnDkBYLh1NFcAdPdrFhUvuJshH_KZvxCO3qOBCkABuihU4oojsgNI1yc&cce=2&category=acrcp_v1_32&sig=AOD64_0Ak65vcS-zccWkOOHWpMbp5lDe8w&ctype=5&q=&nis=4&ved=2ahUKEwi87Mj83_mQAxWt4skDHTt-GHMQ9aACKAB6BAgEED0&adurl=" target"_jordans">
+<img src="https://github.com/jm1322142/maxweb/blob/main/shopping.webp?raw=true" alt= "retro 12"></a>
+</section>
+
+<hr>
+<h2> my hobbies</h2>
+<table class="table-style1">
+<tr>
+<th> hobby</th>
+<th> hours/week</th>
+</tr>
+<td> writing poetry</td>
+<td> 3.5</td>
+<tr>
+<td> working out</td>
+<td> 14 </td>
+</tr>
+</table>
+
+<h2> my  favorite movies</h2>
+<table class="table-style2">
+<tr>
+<th> movie</th>
+<th>  year</th>
+</tr>
+<td> american gangsta </td>
+<td> 1997</td>
+<tr>
+<td> juice</td>
+<td> 1998 </td>
+</tr>
+</table>
+
+<div class="mycontainer">
+<div>
+<h2> my  favorite foods </h2>
+<ul>
+<li> flaming hot cheetos</li>
+<li> hot wings </li>
+<li> funnel cake</li>
+</ul>
+</div>
+
+<div>
+<h2> my favorite drink</h2>
+<ul>
+<li> hennesey </li>
+<li> remy martin </li>
+<li> orange juice </li>
+</ul>
+</div>
+</div>
+
+<section class="video">
+<h2> a video </h2>
+<video width= "360" height="480" controls>
+<source src="https://github.com/jm1322142/maxweb/blob/main/Download.mp4?raw=true">
+Your browser does not support the video tag
+</video>
+
+<section>
+<h2> youtube </h2>
+<iframe src="https://www.youtube.com/embed/aj9coPGuFkM?list=RDaj9coPGuFkM"/?refresh=true"</iframe>
+</body>
+</html>
+
 <html>
 <head>
   <title> My Personal Webpage </title>
