--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@ margin: 10px auto;
 text-align:center;
 border:3px solid green;
 }
+.list-style1{
+list-style-type:square;
+color:darkblue;
+text-align:left;
+margin:20px;
+}
+.list-style2{
+list-style-type:circle;
+color:darkgreen;
+text-align:left;
+margin:20px;
+}
 </style>
   <title> My Personal Webpage </title>
 </head>
@@ -91,7 +103,7 @@ Location: Kansas city
 </p>
 <a href= "mailto:jm1322142@gmail.com" target "_blank"> jm1322142@gmail.com</a>
 <a href= "https://www.google.com/aclk?sa=L&ai=DChsSEwjmoND83_mQAxXtSH8AHcxnKLYYACICCAEQCRoCb2E&co=1&ase=2&gclid=Cj0KCQiArOvIBhDLARIsAPwJXOZjoR3zNIMyYWoIuVXvto4M9T7c9cp3vzJ_00WIBPq4JLMJKtqAd70aAo6eEALw_wcB&cid=CAASugHkaLKcmmIDO8ekchGuHxxoofwDryrBkAsjfjfMeRwOs7Tm-_WDDGNrJwFGOOlP2CPebY2xNS4ZIh_YSFbpib3yUAwh3Fre05Vbkm6RtPqudVMgeljylBCpmmau7lMqf2le_Hu0cBiBI2SI7LzW7vczPdv4f6B5UpEbvRUxuYO8LzgJKR5JYDNSr_KptNW0r1qUnDkBYLh1NFcAdPdrFhUvuJshH_KZvxCO3qOBCkABuihU4oojsgNI1yc&cce=2&category=acrcp_v1_32&sig=AOD64_0Ak65vcS-zccWkOOHWpMbp5lDe8w&ctype=5&q=&nis=4&ved=2ahUKEwi87Mj83_mQAxWt4skDHTt-GHMQ9aACKAB6BAgEED0&adurl=" target"_jordans">
-<img src="https://github.com/jm1322142/maxweb/blob/main/shopping.webp?raw=true" alt= "retro 12"></a>
+<img src="https://github.com/jm1322142/maxweb/blob/main/shopping.webp?raw=true" alt= "retro 12" title=" click this to see more fashionable shoes"></a>
 </section>
 
 <hr>
@@ -126,7 +138,7 @@ Location: Kansas city
 <div class="mycontainer">
 <div>
 <h2> my  favorite foods </h2>
-<ul>
+<ul class="list-style1">
 <li> flaming hot cheetos</li>
 <li> hot wings </li>
 <li> funnel cake</li>
@@ -135,7 +147,7 @@ Location: Kansas city
 
 <div>
 <h2> my favorite drink</h2>
-<ul>
+<ul class="list-style2">
 <li> hennesey </li>
 <li> remy martin </li>
 <li> orange juice </li>
