--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@ Name:Joshua Maxwell
 Age:26
 Location: Kansas city
 </pre>
+<a href="test.html" style= color:black";target="_blank";>
+<button>New page link</button></a>
 </header>
 <section class="about">
 <p> Check out my favorite website:
