--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ color:darkgreen;
 text-align:left;
 margin:20px;
 }
- .button-transition{
+ .button-transition {
   color:white;
   padding:10px 20px
   transition:background-color 0.3s ease;
   border:none;
   cursor:pointer;
 }
-.button-transition:hover{
+.button-transition:hover {
   bakground-color:darkorange;
   
 </style>
@@ -107,7 +107,7 @@ Age:26
 Location: Kansas city
 </pre>
 <a href="test.html" style= color:black";target="_blank";>
-<button>New page link</button></a>
+<button class=" button-transition">New page link</button></a>
 </header>
 <section class="about">
 <p> Check out my favorite website:
