--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ text-align:left;
 margin:20px;
 }
  .button-transition {
+  background-color:navy;
   color:white;
   padding:10px 20px
   transition:background-color 0.3s ease;
