--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ margin:20px;
   cursor:pointer;
 }
 .button-transition:hover {
-  bakground-color:darkorange;
+  background-color:darkorange;
 }
 </style>
   <title> My Personal Webpage </title>
