--- a/index.html
+++ b/index.html
@@ -175,7 +175,21 @@ Location: Kansas city
 <source src="https://github.com/jm1322142/maxweb/blob/main/Download.mp4?raw=true">
 Your browser does not support the video tag
 </video>
+ 
+<form style="margin-top: 30px;">
+<label for="email">Enter your email:</label>
+ <input type="email"id="email"name="email"placeholder="you@example.com"required>
+ <br>
+ <br>
+ <label for="bio"> Tell us about yourself:</label>
+ <br>
+ <textarea id="bio" name="bio" rows"4" cols="40"></textarea>
+ <br>
+ <br>
+ <input type="submit" value= "submit">
+</form>
 
+  
 <section>
 <h2> youtube </h2>
 <iframe src="https://www.youtube.com/embed/aj9coPGuFkM?list=RDaj9coPGuFkM"/?refresh=true"</iframe>
